# bids-validator

./: .all-contributorsrc  .codeclimate.yml  .codespellrc  .dockerignore  .editorconfig  .eslintrc.json  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .mailmap  .pre-commit-config.yaml  .prettierrc.yaml  .readthedocs.yaml  .zenodo.json  404.html  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  ansi-escapes-NPKJVZO2.js  babel.config.js  bids-validator.js  build.ts  chunk-CF75XJX3.js  chunk-ZSFRIFKI.js  circle.yml  cli.js  deno.json  files.js  index.html  index.js  lerna.json  local-run  local-test  (+11 more)
bids-validator/: .codeclimate.yml  .eslintrc.json  .gitattributes  .prettierrc.yaml  Dockerfile  MANIFEST.in  README.md  bids-validator  bids-validator-deno  build.ts  cli.js  deno.json  esbuild.mjs  index.js  local-run  package-lock.json  package.json  pyproject.toml  setup.cfg  tests
bids-validator/bids_validator/: __init__.py  _version.py  bids_validator.py  test_bids_validator.py
bids-validator/bids_validator/rules/: file_level_rules.json  fixed_top_level_names.json  path.json  phenotypic_rules.json  session_level_rules.json  subject_level_rules.json  top_level_rules.json
bids-validator/bids_validator/tsv/: non_custom_columns.json
bids-validator/commonjs/: index.js
bids-validator/esm/: index.js  start.js
bids-validator/schema/: README.md
bids-validator/schemas/: index.js  python_regex.json  regex.json
bids-validator/schemas/json/: coordsystem_eeg.json  coordsystem_meg.json  dataset_description.json
bids-validator/src/: .git-meta.json  README.md  bids-validator.ts  fulltest.ts  main.ts  options.js  schemaTypes.js  summary.ts  version.ts
bids-validator/src/compat/: README.md  adapter-file.ts  fulltest.ts
bids-validator/src/files/: browser.test.ts  browser.ts  deno.test.ts  deno.ts  dwi.ts  filetree.test.ts  filetree.ts  gzip.test.ts  gzip.ts  ignore.test.ts  ignore.ts  inheritance.test.ts  inheritance.ts  json.test.ts  json.ts  nifti.test.ts  nifti.ts  outfile.ts  tiff.ts  tsv.ts
bids-validator/src/issues/: datasetIssues.test.ts  datasetIssues.ts  formatting.ts  index.ts  list.test.ts  list.ts
bids-validator/src/schema/: applyRules.test.ts  applyRules.ts  associations.ts  context.test.ts  context.ts  entities.test.ts  entities.ts  expressionLanguage.test.ts  expressionLanguage.ts  fixtures.test.ts  modalities.ts  tables.test.ts  tables.ts  walk.test.ts  walk.ts
bids-validator/src/setup/: loadSchema.test.ts  loadSchema.ts  options.test.ts  options.ts
bids-validator/src/summary/: collectSubjectMetadata.ts  summary.test.ts  summary.ts
bids-validator/src/tests/: README.md  bom-utf16.tsv  generate-filenames.ts  nullFile.ts  nullReadBytes.ts  schema-expression-language.test.ts  simple-dataset.ts
bids-validator/src/types/: check.ts  columns.test.ts  columns.ts  context.ts  file.ts  filetree.ts  hed.ts  ignore.ts  issues.ts  schema.ts  validation-result.ts
bids-validator/src/utils/: errors.ts  logger.test.ts  logger.ts  memoize.ts  objectPathHandler.ts  output.ts
bids-validator/src/validators/: bids.test.ts  bids.ts  citation.test.ts  citation.ts  filenameIdentify.test.ts  filenameIdentify.ts  filenameValidate.test.ts  filenameValidate.ts  filenames.test.ts  filenames.ts  hed.ts  isBidsy.ts  json.ts  validateFiles.test.ts
bids-validator/tests/: bids-web.spec.js  bids.spec.js  bval.spec.js  bvec.spec.js  cli.spec.js  consoleFormat.spec.js  events.spec.js  headerField.spec.js  hed.spec.js  json.spec.js  metadata.spec.js  nii.spec.js  potentialLocations.spec.js  session.spec.js  setupTests.js  tsv.spec.js  type.spec.js
bids-validator/tests/data/: pet001_jsonContentsDict.js
bids-validator/tests/env/: ExamplesEnvironment.js  ExamplesEnvironmentWeb.js  FileList.js  config.js  git-submodule.js  load-examples old.js  load-examples.js  unzip.js  with-lock.js
bids-validator/tests/utils/: config.spec.js  files-web.spec.js  files.spec.js  issues.spec.js  metadata.spec.js
bids-validator/utils/: array.js  bids_files.js  common.js  config.js  consoleFormat.js  filenamesOnly.js  getSessionStorage.js  index.js  isNode.js  json.js  modalities.js  options.js  promise_limiter.js  prototype.js  schemaTypes.js  type.js  unit.js
bids-validator/utils/__tests__/: bids_files.spec.js  collectSubjectMetadata.spec.js  filenamesOnly.spec.js  gitTreeMode.spec.js  type.spec.js  unit.spec.js
bids-validator/utils/files/: FileAPI.js  collectDirectorySize.js  generateMergedSidecarDict.js  generateMergedSidecarWithPath.js  getBFileContent.js  getFileStats.js  illegalCharacterTest.js  index.js  newFile.js  potentialLocations.js  readBuffer.js  readDir.js  readFile.js  readNiftiHeader.js  readOMEFile.js  remoteFiles.js  sessions.js  testFile.js  validateMisc.js
bids-validator/utils/issues/: index.js  issue.js  list.js
bids-validator/utils/summary/: checkForDerivatives.js  collectDataTypes.js  collectModalities.js  collectPetFields.js  collectSessions.js  collectSubjectMetadata.js  collectSubjects.js  collectSummary.js  metadata.js
bids-validator/validators/: checkAnyDataPresent.js  events.js  headerFields.js  hed.js  index.js  options.js  schemaTypes.js  session.js
bids-validator/validators/__tests__/: checkAnyDataPresent.spec.js  headerFields.spec.js
bids-validator/validators/bids/: checkConsistency.js  checkDatasetDescription.js  checkReadme.js  checkSamples.js  fullTest.js  groupFileTypes.js  index.js  obj.js  quickTest.js  quickTestError.js  reset.js  start.js  subSesMismatchTest.js  subjects.js
bids-validator/validators/bval/: bval.js  index.js  validate.js
bids-validator/validators/bvec/: bvec.js  index.js  validate.js
bids-validator/validators/events/: events.js  hed.js  index.js  validate.js
bids-validator/validators/json/: index.js  json.js  load.js  validate.js
bids-validator/validators/microscopy/: checkJSONAndField.js  checkSamples.js  ometiff.js  validate.js  (+1 more)
tools/pypi-whl/: README.md  pdm_build.py  publish.sh  pyproject.toml  validate_wheel.sh
(+899 files in other folders)
