[project]
name = "bids-validator-deno"
description = "Typescript implementation of the BIDS validator"
authors = [
    {name = "bids-standard developers"},
]
dependencies = ["deno>=2.5.0"]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: JavaScript",
]
keywords = ["BIDS", "BIDS validator"]
dynamic = ["version"]

[project.urls]
Documentation = "https://bids-validator.readthedocs.io/"
"Source code" = "https://github.com/bids-standard/bids-validator"
Issues = "https://github.com/bids-standard/bids-validator/issues"

[project.scripts]
bids-validator-deno = "bids_validator_deno:cli"

[dependency-groups]
doc = [
    "sphinx",
    "myst_parser",
    "sphinx-book-theme",
    "sphinx-copybutton",
    "sphinx-design",
]

[build-system]
requires = ["pdm-backend", "deno>=2.5"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.build]
source-includes = ["src/", "deno.json", "deno.lock"]
excludes = [".*"]
