[metadata]
name = bids-validator
url = https://github.com/bids-standard/bids-validator
author = PyBIDS developers
author_email = bids-discussion@googlegroups.com
maintainer = BIDS Developers
maintainer_email = bids-discussion@googlegroups.com
description = Validator for the Brain Imaging Data Structure
long_description = file:README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering

[options]
packages = find:

[options.package_data]
bids_validator =
    rules/*.json
    tsv/*.json

[bdist_wheel]
universal=1

[versioneer]
VCS = git
style = pep440
versionfile_source = bids_validator/_version.py
versionfile_build = bids_validator/_version.py
tag_prefix = v
parentdir_prefix =
